ci: fix lint by building before type check

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,6 +23,9 @@ jobs:
 
       - run: bun run lint:prettier
 
+      # needed for `lint:ts`
+      - run: bun run build:web
+
       - run: bun run lint:ts
 
       # needed for `commitlint`
