--- a/examples/servers/bun-elysia/tsconfig.json
+++ b/examples/servers/bun-elysia/tsconfig.json
@@ -18,6 +18,6 @@
     "skipLibCheck": true,
     "composite": true,
     "downlevelIteration": true,
-    "allowSyntheticDefaultImports": true
-  }
+    "allowSyntheticDefaultImports": true,
+  },
 }
