--- a/examples/servers/node-fastify/tsconfig.json
+++ b/examples/servers/node-fastify/tsconfig.json
@@ -15,6 +15,6 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
-  }
+    "noFallthroughCasesInSwitch": true,
+  },
 }
