--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vitest/coverage-v8": "^1.2.1",
+    "astro": "^4.2.4",
     "commitlint": "^18.4.4",
     "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
